--- a/src/dotnet.challenge.data/dotnet.challenge.data.csproj
+++ b/src/dotnet.challenge.data/dotnet.challenge.data.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dotnet.challenge.domain\Dotnet.Challenge.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
